Add link o0n pages which is redirect to FAQ page

--- a/webportal/webapp/src/app/account/faq/faq.component.html
+++ b/webportal/webapp/src/app/account/faq/faq.component.html
@@ -5,7 +5,7 @@
             <h3>Frequently Asked Questions</h3>
             <mat-card-content>
 
-                <div class="push-top-40" id="sdcInfo">
+                <div class="padding-top-xs" id="sdcInfo">
                     <ul>
                         <h4>1) What is Secure Data Commons Platform?</h4>
                         <p>The Secure Data Commons is an online analytic portal for transportation researchers. On this
@@ -20,7 +20,7 @@
                     </ul>
                 </div> <hr>
 
-                <div class="push-top-40" id="sdcAccess">
+                <div class="padding-top-xs" id="sdcAccess">
                     <ul>
                         <h4>2) How can I get access to the SDC portal?</h4>
                         <span>
@@ -40,7 +40,7 @@
                     </ul>
                 </div> <hr>
 
-                <div class="push-top-40" id="sdcDataset">
+                <div class="padding-top-xs" id="sdcDataset">
                     <ul>
                         <h4>3) What is SDC Datasets?</h4>
                         <p>The dataset types are described as follows:</p>
@@ -55,7 +55,7 @@
                     </ul>
                 </div> <hr>
 
-                <div class="push-top-40" id="datasetAccess">
+                <div class="padding-top-xs" id="datasetAccess">
                     <ul>
                         <h4>4) How can I get access to the SDC Datasets?</h4>
                         <p>These are datasets that are available within SDC platform that are published / enabled by SDC
@@ -82,7 +82,7 @@
                     </ul>
                 </div> <hr>
 
-                <div class="push-top-40" id="datasetInfo">
+                <div class="padding-top-xs" id="datasetInfo">
                     <ul>
                         <h4>5) How will I understand what a particular dataset consist of?</h4>
                         <span>
@@ -92,7 +92,7 @@
                     </ul>
                 </div> <hr>
 
-                <div class="push-top-40" id="workstationLaunch">
+                <div class="padding-top-xs" id="workstationLaunch">
                     <ul>
                         <h4>6) How can launch a workstation?</h4>
                         <span>
@@ -110,7 +110,7 @@
                     </ul>
                 </div> <hr>
 
-                <div class="push-top-40" id="dataStore">
+                <div class="padding-top-xs" id="dataStore">
                     <ul>
                         <h4>7) Where do I my store data</h4>
                         <span>
@@ -121,7 +121,7 @@
                     </ul>
                 </div><hr>
 
-                <div class="push-top-40" id="appStream">
+                <div class="padding-top-xs" id="appStream">
                     <ul>
                         <h4>8) How can I bring my own datasets/algorithm to my appstream instance?</h4>
                         <span>
@@ -148,8 +148,7 @@
                         </span>
                     </ul>
                 </div><hr>
-
-                <div class="push-top-40" id="datasetPublish">
+                <div class="padding-top-xs" id="datasetPublish">
                     <ul>
                         <h4>9) How can I publish my dataset/algorithm? </h4>
                         <p>Follow the below steps to publish your datasets / algorithms and share with other SDC
