add sprint 8 changes

--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -47,6 +47,10 @@
         <!--</div>-->
         <p class="logo">Secure Data Commons Platform</p>
         <p class="font-13">The SDC platform was created as a prototype as part of a U.S. DOT research project under contract number DTFH6116D00052 / Task 12</p>
+        <hr style="width: 80%; margin-bottom: 15px; margin-top: 15px;">
+        <p class="font-13"><a style="color:white;" href="https://www.fhwa.dot.gov/privacy.cfm">Privacy Policy</a> | <a style="color:white;" href="https://www.fhwa.dot.gov/foia/">Freedom of Information Act (FOIA)</a> | <a style="color:white;" href="https://www.fhwa.dot.gov/accessibility/">Accessibility</a> | <a style="color:white;" href="https://www.fhwa.dot.gov/webpolicies/publishschedule.cfm">Web Policies & Notices</a> | <a style="color:white;" href="https://www.transportation.gov/civil-rights/civil-rights-awareness-enforcement/no-fear-act">No Fear Act</a> | <a style="color:white;" href="https://www.oig.dot.gov/Hotline">Report Waste, Fraud and Abuse</a> |
+          <a style="color:white;" href="https://www.transportation.gov/">U.S. DOT Home</a> | <a style="color:white;" href="https://www.usa.gov/">USA.gov</a> | <a style="color:white;" href="https://www.whitehouse.gov/">WhiteHouse.gov</a></p>
+        <p class="font-13"><a style="color:white;" href="https://www.fhwa.dot.gov/">Federal Highway Administration</a> | 1200 New Jersey Avenue, SE | Washington, DC 20590 | 202-366-4000</p>
       </div>
     </div>
   </div>
