--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -47,11 +47,11 @@
               <thead class="thead-inverse">
               <tr>
                 <th>Name</th>
-                <th>Type</th>
+                <th>Category</th>
                 <th>Description</th>
-                <th>Programming tools / language</th>
                 <th>Geographic Scope</th>
                 <th>Start / End for Data Availability</th>
+                <th>Owner</th>
                 <th>Request Access</th>
               </tr>
               </thead>
@@ -59,12 +59,12 @@
               <ng-template ngFor let-sdcDataset [ngForOf]="sdcDatasets">
                 <tr style="cursor: pointer" (click)="selectsdcDataset(sdcDataset)" [ngClass]="{'selected_row' : selectedsdcDataset == sdcDataset}">
                   <td>{{sdcDataset.Name}}</td>
-                  <td>{{sdcDataset.Type}}</td>
+                  <td>{{sdcDataset.Category}}</td>
                   <td>{{sdcDataset.Description}}</td>
-                  <td>
+                  <!-- <td>
                     <div *ngIf="sdcDataset.Programming_tool">{{sdcDataset.Programming_tool}}</div>
                     <div *ngIf="!sdcDataset.Programming_tool">-----</div>
-                  </td>
+                  </td> -->
                   <td>
                     <div *ngIf="sdcDataset.Geographic_Scope">{{sdcDataset.Geographic_Scope}}</div>
                     <div *ngIf="!sdcDataset.Geographic_Scope">-----</div>
@@ -72,6 +72,49 @@
                   <td>
                     <div *ngIf="sdcDataset.Data_Availability_Span">{{sdcDataset.Data_Availability_Span}}</div>
                     <div *ngIf="!sdcDataset.Data_Availability_Span">-----</div>
+                  </td>
+                  <td>
+                    <div *ngIf="sdcDataset.Owner">{{sdcDataset.Owner}}</div>
+                  </td>
+                  <td><button class="btn btn-primary dotBtn" (click)="requestMail(sdcDataset.BucketName, 'Access Request Mail', '')">Request</button></td>
+                </tr>
+              </ng-template>
+              </tbody>
+            </table>
+          </mat-expansion-panel>
+
+          <mat-expansion-panel style="margin-top: 40px;">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                SDC Algorithms
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <span style="color: grey">These are algorithms that are available within SDC platform that are published / enabled by SDC team or
+              published by other users. Access to these algorithms are available upon request. <a [routerLink]="['/account/faq']" fragment="sdcDataset">Learn more </a> about the
+              different types of algorithms and how to request access to these algorithms.
+            </span><hr>
+            <table class="table">
+              <thead class="thead-inverse">
+              <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Programming tools / language</th>
+                <th>Owner</th>
+                <th>Request Access</th>
+              </tr>
+              </thead>
+              <tbody>
+              <ng-template ngFor let-sdcDataset [ngForOf]="sdcAlgorithms">
+                <tr style="cursor: pointer" (click)="selectsdcDataset(sdcDataset)" [ngClass]="{'selected_row' : selectedsdcDataset == sdcDataset}">
+                  <td>{{sdcDataset.Name}}</td>
+                  <!-- <td>{{sdcDataset.Type}}</td> -->
+                  <td>{{sdcDataset.Description}}</td>
+                  <td>
+                    <div *ngIf="sdcDataset.Programming_tool">{{sdcDataset.Programming_tool}}</div>
+                    <div *ngIf="!sdcDataset.Programming_tool">-----</div>
+                  </td>
+                  <td>
+                    <div *ngIf="sdcDataset.Owner">{{sdcDataset.Owner}}</div>
                   </td>
                   <td><button class="btn btn-primary dotBtn" (click)="requestMail(sdcDataset.BucketName, 'Access Request Mail', '')">Request</button></td>
                 </tr>
