recent UI changes

--- a/webportal/webapp/src/app/account/accounthome/accounthome.component.html
+++ b/webportal/webapp/src/app/account/accounthome/accounthome.component.html
@@ -22,8 +22,8 @@
         <!--<div class="col-md-1"></div>-->
         <div class="col-md-6">
           <mat-card style="height: 155px">
-            <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/2.png"> &nbsp;<a [routerLink]="['/account/workstation']">Access to workstations </a> with programming tools</mat-card-subtitle>
-            <mat-card-content class="matContent">Access the workstations assigned to you, if you have requested as part of the registration process </mat-card-content>
+            <mat-card-subtitle class="matTitle"><img src="../../assets/images/drop_icon/2.png"> &nbsp;Access to workstations with programming tools</mat-card-subtitle>
+            <mat-card-content class="matContent"><a [routerLink]="['/account/workstation']">Access the workstations</a> assigned to you, if you have requested as part of the registration process </mat-card-content>
           </mat-card>
         </div>
       </div>
