UI changes for FAQs

--- a/webportal/webapp/src/app/account/faq/faq.component.html
+++ b/webportal/webapp/src/app/account/faq/faq.component.html
@@ -5,7 +5,7 @@
             <h3>Frequently Asked Questions</h3>
             <mat-card-content>
 
-                <div class="padding-top-xs" id="sdcInfo">
+                <!-- <div class="padding-top-xs" id="sdcInfo">
                     <ul>
                         <h4>1) What is Secure Data Commons Platform?</h4>
                         <p>The Secure Data Commons is an online analytic portal for transportation researchers. On this
@@ -18,9 +18,9 @@
                             different datasets related to traffic, weather, crashes etc.
                         </p>
                     </ul>
-                </div> <hr>
+                </div> <hr> -->
 
-                <div class="padding-top-xs" id="sdcAccess">
+                <!-- <div class="padding-top-xs" id="sdcAccess">
                     <ul>
                         <h4>2) How can I get access to the SDC portal?</h4>
                         <span>
@@ -38,9 +38,9 @@
                             <li class="push-top-30">Once approved, support team will send you an email with the instructions for accessing the platform.</li>
                         </span>
                     </ul>
-                </div> <hr>
+                </div> <hr> -->
 
-                <div class="padding-top-xs" id="sdcDataset">
+                <!-- <div class="padding-top-xs" id="sdcDataset">
                     <ul>
                         <h4>3) What is SDC Datasets?</h4>
                         <p>The dataset types are described as follows:</p>
@@ -53,11 +53,11 @@
                             <p>Published datasets are created by researchers to disclose their research for other users to verify and reuse them beyond the original purpose for which they were collected. Published datasets are a result of combining analysis on curated datasets available in SDC platform along with other datasets or algorithms that is owned/created by a researcher or data scientist</p>
                         </span>
                     </ul>
-                </div> <hr>
+                </div> <hr> -->
 
                 <div class="padding-top-xs" id="datasetAccess">
                     <ul>
-                        <h4>4) How can I get access to the SDC Datasets?</h4>
+                        <h4>1) How can I get access to the SDC Datasets?</h4>
                         <p>These are datasets that are available within SDC platform that are published / enabled by SDC
                             team or published by other users. Access to these datasets are available upon request.
                         </p>
@@ -84,7 +84,7 @@
 
                 <div class="padding-top-xs" id="datasetInfo">
                     <ul>
-                        <h4>5) How will I understand what a particular dataset consist of?</h4>
+                        <h4>2) How will I understand what a particular dataset consist of?</h4>
                         <span>
                             <li class="push-top-30">Click on Name of Dataset, you can see README of that particular dataset below it.</li>
                             <img src="../../assets/images/faq_image/dataset-4.png" class="mx-auto d-block width-70">
@@ -94,7 +94,7 @@
 
                 <div class="padding-top-xs" id="workstationLaunch">
                     <ul>
-                        <h4>6) How can launch a workstation?</h4>
+                        <h4>3) How can launch a workstation?</h4>
                         <span>
                             <li class="push-top-30">Click on ‘Workstation’ menu tab</li>
                             <img src="../../assets/images/faq_image/Workstation-1.png" class="mx-auto d-block width-70">
@@ -112,7 +112,7 @@
 
                 <div class="padding-top-xs" id="dataStore">
                     <ul>
-                        <h4>7) Where do I my store data</h4>
+                        <h4>4) Where do I my store data</h4>
                         <span>
                             <p>You can store data in your ‘Home Folder’ or ‘Temporary Folder’.</p>
                             <li class="push-top-30"><b>Home Folder:</b> Data stored in home folder will remain persistent, you can access it on your next login</li>
@@ -123,7 +123,7 @@
 
                 <div class="padding-top-xs" id="appStream">
                     <ul>
-                        <h4>8) How can I bring my own datasets/algorithm to my appstream instance?</h4>
+                        <h4>5) How can I bring my own datasets/algorithm to my appstream instance?</h4>
                         <span>
                             <li class="push-top-30">Navigate to My Workstations page</li>
                             <img src="../../assets/images/faq_image/Workstation-1.png" class="mx-auto d-block width-70">
@@ -150,7 +150,7 @@
                 </div><hr>
                 <div class="padding-top-xs" id="datasetPublish">
                     <ul>
-                        <h4>9) How can I publish my dataset/algorithm? </h4>
+                        <h4>6) How can I publish my dataset/algorithm? </h4>
                         <p>Follow the below steps to publish your datasets / algorithms and share with other SDC
                             Users.</p>
                         <span>
