--- a/webportal/webapp/src/app/main/main.component.html
+++ b/webportal/webapp/src/app/main/main.component.html
@@ -22,7 +22,10 @@
             <a class="nav-link" [routerLink]="['/datasetinfo']">DATASETS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
-            <a class="nav-link" [routerLink]="['/register']">REGISTER / LOGIN</a>
+            <a class="nav-link" [routerLink]="['/register']">REGISTER / LOGIN &emsp; &nbsp;|</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link" [routerLink]="['/faqs']">FAQs</a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
