--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -27,7 +27,7 @@
             <tr>
               <td>{{ i }}</td>
               <td>{{ stack.display_name }}</td>
-              <td> {{stack.application}} </td>
+              <td style="width:500px;"> {{stack.application}} </td>
               <td>
                 <div *ngIf="!stack.instance_id">
                   <span> ----</span>
@@ -39,7 +39,7 @@
               </td>
               <td>
                 <!--<button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>-->
-                <a class="btn btn-primary dotBtn" style="cursor: pointer;" (click)="launchWorkstation(stack)"> Launch </a>
+                <a class="btn btn-primary dotBtn" style="cursor: pointer;" (click)="launchWorkstation(stack)" target="_blank"> Launch </a>
               </td>
             </tr>
           </ng-template>
