--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -10,7 +10,7 @@
           accessing the platform.</p>
 
         <div class="accessLink">
-          <a style="font-size:16px;" href="../../../assets/SDC_Form/SDCAccessRequestForm.pdf" target="_blank" (click)="requestForm()">Access Request Form</a>
+          <a style="font-size:16px;" href="../../../assets/SDC_Form/SDCAccessRequestForm.pdf" target="_blank" >Access Request Form</a>
         </div>
         <div style="width:50px;height:50px;float:left;padding-left:10px;padding-top:20px;">
           <img style="width:32px;height:32px;" src="../../../assets/images/info_icon.png" alt="Warning!">
