--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -1,5 +1,5 @@
 <!--SDC Datasets Access Request Dialogbox-->
-<div *ngIf="mailType == 'Access Request Mail' && datasetName != 'U.S DOT Connected Vehicle Pilot (CVP) Evaluation Datasets'">
+<div *ngIf="mailType == 'Access Request Mail' && datasetName != 'CVP'">
   <h4>SDC Data Access Request Form</h4>
   <hr>
   <mat-dialog-content>
@@ -54,8 +54,8 @@
 
 
 <!--SDC Datasets Access Request Dialogbox-->
-<div *ngIf="mailType == 'Access Request Mail' && datasetName == 'U.S DOT Connected Vehicle Pilot (CVP) Evaluation Datasets'">
-  <h4>SDC Data Access Request Form</h4> 
+<div *ngIf="mailType == 'Access Request Mail' && datasetName == 'CVP'">
+  <h4>SDC Data Access Request Form</h4>
   <hr>
   <mat-dialog-content>
       <p>Please fill out the following information to obtain access to the data set.</p>
@@ -181,4 +181,66 @@
     </span>&nbsp;
     <button class="btn btn-primary dotBtn" (click)="onNoClick()">CANCEL</button>
   </mat-dialog-actions>
+</div>
+
+<!-- <div *ngIf="requestType == 'Upload Files To S3'">
+  <ng-progress
+    [positionUsing]="'marginLeft'"
+    [direction]="'leftToRightIncreased'"
+    [color]="'#4286f4'"
+    [trickleSpeed]="500"
+    [thick]="true"
+    [ease]="'easeInSine'"></ng-progress>
+  <h4>Upload files to SDC platform</h4>
+  <hr>
+  <p>Files will be uploaded to the bucket - <b>{{ userBucketName }}</b></p>
+  <label class="btn btn-default">
+    <input type="file" (change)="selectFile($event)">
+  </label>
+  <button class="btn btn-primary dotBtn" [disabled]="!selectedFiles" (click)="uploadFiles(userBucketName)">Upload</button>
+</div> -->
+
+<div *ngIf="requestType == 'Upload Files To S3'">
+    <h4>Upload files to SDC platform</h4>
+    <hr>
+    <p>Files will be uploaded to the bucket - <b>{{ userBucketName }}</b></p>
+   
+    <!--<p-fileUpload name="selectedFiles[]" customUpload="true" (uploadHandler)="uploadFiles($event)"
+    multiple="multiple" accept="image/*,.zip" maxFileSize="1000000000">
+      <ng-template pTemplate="content">
+          <ul *ngIf="selectedFiles.length">
+              <li *ngFor="let file of selectedFiles">{{file.name}} - {{file.size}} bytes</li>
+          </ul>
+      </ng-template>
+  </p-fileUpload>-->
+
+
+  <!--<p-fileUpload name="selectedFiles[]" (onBeforeSend) = "onBeforeUpload($event)" (onSelect) ="onSelect($event)"  (onError)="onUpload($event)" 
+  multiple="multiple" accept="image/*" maxFileSize="1000000">
+    <ng-template pTemplate="content">
+      <ul *ngIf="uploadedFiles.length">
+          <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+      </ul>
+    </ng-template>        
+  </p-fileUpload>-->
+
+
+  <p-fileUpload #fileUpload name="selectedFiles[]" customUpload="true" (uploadHandler)="uploadFiles($event)"
+  multiple="multiple" accept="image/*,.zip" maxFileSize="1000000000">
+    <ng-template pTemplate="content">
+      <ul *ngIf="selectedFiles.length">
+          <li *ngFor="let file of selectedFiles"><b> Uploaded {{file.name}} - {{file.size}} bytes </b> </li>
+      </ul>
+    </ng-template>
+</p-fileUpload>
+
+  
+  <!--<p-fileUpload name="selectedFiles[]" mode="advanced" customUpload="true" (uploadHandler)="uploadFiles($event)"
+        multiple="multiple" accept="image/*,.zip" maxFileSize="1000000000" styleClass="ui-fileupload, ui-fileupload-buttonbar, ui-fileupload-content">
+    <ng-template pTemplate="content">
+        <ul *ngIf="selectedFiles.length">
+            <li *ngFor="let file of selectedFiles">{{file.name}} - {{file.size}} bytes</li>
+        </ul>
+    </ng-template>
+</p-fileUpload>-->
 </div>
