DOTAS-349 Add metadata to s3 object and changes to the download,publish and export functionality

--- a/webportal/webapp/src/app/account/datasets/datasets.component.css
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.css
@@ -215,3 +215,9 @@
 .ui-table-tbody .ui-chkbox {
   pointer-events: none;
 }
+
+.smallWidth {
+    width: 20%;
+}
+
+.material-icons.md-dark.md-inactive { color: rgba(78, 79, 80, 0.26); }
