--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -33,12 +33,14 @@
               <ng-template pTemplate="body" let-myDataset let-columns="columns">
                   <tr *ngIf="!myDataset.filename.endsWith('/')">
                       <td>
-                          <p-tableCheckbox [value]="myDataset" [disabled]="!myDataset.download"></p-tableCheckbox>
+                          <p-tableCheckbox [value]="myDataset" [disabled]="!myDataset.download || myDataset.download=='false'"></p-tableCheckbox>
                       </td>
                       <td>{{myDataset.filename}}</td>
-                      <td><i class="material-icons iconFont material-icons md-dark md-inactive" >exit_to_app</i></td>
+                      
+                      <td *ngIf="(myDataset.export)"><i class="material-icons iconFont" (click)="requestMail('','Dataset publish Mail', myDataset.filename)" >exit_to_app</i></td>
+                      <td *ngIf="!(myDataset.export) || (myDataset.export)=='false'"><i class="material-icons iconFont material-icons md-dark md-inactive" >exit_to_app</i></td>
                       <td *ngIf="myDataset.publish=='true'"><i class="material-icons iconFont"  (click)="requestMail('','Dataset publish Mail', myDataset.filename)">cloud_upload</i></td>
-                      <td *ngIf="!myDataset.publish"><i class="material-icons iconFont material-icons md-dark md-inactive">cloud_upload</i></td>
+                      <td *ngIf="!myDataset.publish || myDataset.publish=='false'"><i class="material-icons iconFont material-icons md-dark md-inactive">cloud_upload</i></td>
                   </tr>
               </ng-template>
           </p-table>
